--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -18,8 +18,8 @@
                 <li><a class="" href="{% url 'board:b_factory_list' %}">공장</a></li>
                 <li><a class="" href="{% url 'board:b_workcenter_list' %}">작업장</a></li>
                 <li><a class="" href="{% url 'board:b_item_list' %}">품목</a></li>
-                <li><a class="" href="{% url 'board:b_bizpartner_list' %}">거래처(미정)</a></li>
-                <li><a class="" href="{% url 'board:b_bom_list' %}">BOM(미정)</a></li>
+                <li><a class="" href="{% url 'board:b_bizpartner_list' %}">거래처</a></li>
+                <li><a class="" href="{% url 'board:b_bom_list' %}">BOM</a></li>
                 <li><a class="" href="{% url 'board:codemanage' %}">통합코드관리</a></li>
                 <li><a class="" href="{% url 'board:b_itemaccnt' %}">품목계정관리</a></li>
                 <li><a class="" href="{% url 'board:b_itemgrp' %}">품목그룹관리</a></li>
