item_screen search update
품목 조회기능 업데이트

--- a/master/website/board/templates/board/b_bom.html
+++ b/master/website/board/templates/board/b_bom.html
@@ -218,9 +218,9 @@
 <input type="hidden" value="{{itemid}}" id="itemid">
 <input type="hidden" value="{{bomid}}" id="bomid">
 
-<div style="margin:20px 0;padding:10px 0;">
+<div >
 
-    <div style="margin:20px 0;">
+    <div>
     <table border="1" cellpadding="0" cellspacing="0" width="100%">
     <tr height="45">
         <td width="20%" align="center"  bgcolor="#FFF" valign="top">
