Add member_edit function
Added member_edit function.

--- a/master/website/templates/navbar.html
+++ b/master/website/templates/navbar.html
@@ -239,7 +239,7 @@
             <ul class="dropdown-menu extended logout">
               <div class="log-arrow-up"></div>
               <li class="eborder-top">
-                <a href="#"><i class="icon_profile"></i> My Profile</a>
+                <a href="{% url 'board:member_edit' %}"><i class="icon_profile"></i> My Profile</a>
               </li>
               <li>
                 <a href="#"><i class="icon_mail_alt"></i> My Inbox</a>
