--- a/master/website/board/templates/registration/member_edit.html
+++ b/master/website/board/templates/registration/member_edit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
-    home
+    edit
 {% endblock %}
 
 
@@ -16,11 +16,34 @@
         <!--overview start-->
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-laptop"></i> 비밀번호를 입력해주십시오.</h3>
+            <h3 class="page-header"><i class="fa fa-laptop"></i> 회원정보 변경</h3>
             <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="/">Home</a></li>
-              <li><i class="fa fa-laptop"></i>Dashboard</li>
+              <li><i class="fa fa-laptop"></i>비밀번호를 입력하십시오.</li>
             </ol>
+               <table>
+                <tr>
+                    <td width="" align="center">타입코드</td>
+                    <td width="" align="center">타입명</td>
+                    <td width="" align="center">등록</td>
+                    </td>
+                </tr>
+                <tbody>
+                <tr>
+                    <td>
+                        <input type="text" id="type_cd" class="form-control" placeholder="Type Code">
+
+                    </td>
+                    <td>
+                        <input type="text" id="type_name" class="form-control" placeholder="Type Name">
+
+                    </td>
+                    <td>
+                        <a class="btn btn-primary btn-sm" href="javascript:void(0);" onclick="insertType();" title="Bootstrap 3 themes generator">저장</a>
+                    </td>
+                </tr>
+                </tbody>
+
+            </table>
           </div>
         </div>
       </section>
